--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -4,5 +4,12 @@
 </head>
 <body>
 <p>hello world.</p>
+
+<form action="" method="post">
+	{% csrf_token %}
+	{{form.as_p}}
+	<button type="submit" value="submit">登録</button>
+</form>
+
 </body>
 </html>
