--- a/templates/search/index.html
+++ b/templates/search/index.html
@@ -1,8 +1,7 @@
 <html>
-<head>
-<title>search page!</title>
-</head>
+  {% include 'parts/head.html' with title='検索' %}
 <body>
+  {% include 'parts/header.html' %}
 
 <form action="" method="get">
 	<input name="query" value="{{ request.GET.query }}" type="text" />
