--- a/templates/user/edit.html
+++ b/templates/user/edit.html
@@ -1,8 +1,7 @@
 <html>
-<head>
-<title>home page!</title>
-</head>
+	{% include 'parts/head.html' with title='編集' %}
 <body>
+	{% include 'parts/header.html' %}
 <p>hello world.</p>
 
 <form action="" method="post">
